# TitanBot

./: .cursorrules  .env.example  .gitignore  AGENT_WORKFLOW_PLAN.md  ANALYSIS_REPORT.md  ARCHITECTURE_LESSONS.md  COMMUNICATION.md  CONTEXT_TIERING_TEMPLATE.md  EVOLUTION.md  IMPROVEMENT_PLAN.md  KNOWLEDGE_BASE_ROADMAP.md  LESSONS_LEARNED.md  LICENSE  NANOBOT_IMPROVEMENT_REPORT.md  OPERATIONS.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PROJECT_STATUS.md  README.md  SECURITY.md  Skill trq212.md  TEST_TRACKER.md  TOOLS.md  check_skill.py  check_skill_final.py  config.sample.json  harness_design_analysis.md  lifecycle_log.txt  progress_report.md  pyproject.toml  run_rpa_test.py  session_test_out.txt  session_test_out2.txt  session_test_out3.txt  test_agent_features.py  test_ast.py  test_compute_broker.py  test_eval_output.txt  test_fake_completion.py  test_kb.py  (+9 more)
.agent/: CODEBASE_MAP.md
.agent/scripts/: read_pdf.py
.agent/workflows/: read_paper.md
.test_sessions/httpbin.org/: session.enc  session.meta.json
MD Files/: Browser RPA Fusion Act Verify Loop   Operation Strategy Enhanced Loop Detection.md  Phase 37 Complex SPA Interaction Testing Roadmap.md  cross_platform_assessment.md  harness_design_analysis.md  project_audit20260327.md
archive/: PROJECT_STATUS.md
archive/docs/: AGENT_WORKFLOW_PLAN.md  IMPROVEMENT_PLAN.md  (+1 more)
debug/: debug_attachments.py  debug_find.py  debug_folder.py  debug_raw_attachments.py  test_full_workflow.py  test_outlook_workflow.py
docs/: L2_VERIFICATION_RETHINK.md
nanobot/: compute.py  onboard.py  plugin_loader.py
nanobot/agent/: i18n.py  (+30 more)
resources/: CRON_ANALYSIS.md  SESSION_SUMMARY.md  SKILL_DEV_LESSONS.md
tests/: test_a23_session_direct.py  test_architecture.py  test_auth_rejection.py  test_channel_image_support.py  test_channel_security.py  test_channels_offline.py  test_code_quality.py  test_compute_broker.py  test_config_schema.py  test_context_knowledge.py  test_dashboard_api.py  test_dashboard_auth.py  test_experience_bank.py  test_fixes.py  test_full_workflow.py  test_gemini.py  test_helpers.py  test_hitl_state_handler.py  test_hitl_store.py  test_hybrid_retrieval.py  test_i18n.py  test_identity_mapping.py  test_knowledge_decomposition.py  test_knowledge_graph.py  test_knowledge_judge.py  test_knowledge_versioning.py  test_knowledge_workflow.py  test_llm_workflow.py  test_loop_cleanup.py  test_loop_integration.py  test_memory_daily.py  test_memory_tool.py  test_metrics_tokens.py  test_ocr_engine.py  test_ocr_integration.py  test_outlook_enhancements.py  test_outlook_workflow.py  test_phase19_optimizations.py  test_phase21a_fixes.py  test_phase21b_fixes.py  (+42 more)
workspace/: KNOWLEDGE.md  SOUL.md  TOOLS.md  todo.md
(+105 files in other folders)
